# HUFSland-information-system-integration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
