[tool.poetry]
name = "hufsland-information-system-integration"
version = "1"
description = "[ HUFSland ] 종합정보시스템 연동"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
