[tool.poetry]
name = "hufsland-information-system-integration"
version = "1"
description = "[ HUFSland ] 종합정보시스템 연동"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"
fastapi = "^0.88.0"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
alembic = "^1.9.1"
sqlalchemy = "^1.4.45"

[tool.poetry.group.formatter.dependencies]
pre-commit = "^2.21.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
